one more toc-generator fix, fix too wide scope for h3 color in css

--- a/public_html/assets/css/nf-core.css
+++ b/public_html/assets/css/nf-core.css
@@ -1074,7 +1074,7 @@ Based on https://codepen.io/wintr/pen/beBJBb */
   border-color: #dc3545;
 }
 
-.pipeline-page-content h3, .pipeline-page-content .h3 {
+.schema-docs h3, .schema-docs .h3 {
   color: #6c757d;
 }
 .toc > .list-group {
